# timestamper

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json  postcss.config.cjs
.github/workflows/: flow.yml
desktop-client/desktop-timestamper/: package.json  tsconfig.json
desktop-client/desktop-timestamper/src/: App.tsx  index.html  index.ts  renderer.tsx
desktop-client/desktop-timestamper/src/components/: Live.tsx  Login.tsx  Main.tsx
desktop-client/desktop-timestamper/src/utils/: interfaces.ts  requests.ts
react-app/: package.json
react-app/src/components/: Login.tsx  Main.tsx
react-app/src/stylesheets/: App.css
react-app/src/utils/: requests.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  navigate.rs
src/components/: Home.tsx  Hotkey.tsx  Info.tsx  Live.tsx  Logged.tsx  Login.tsx  Main.tsx  Marker.tsx  Options.tsx  PasteBin.tsx
src/styles/: common.css  home.css  info.css  login.css  marker.css  options.css  pastebin.css
src/stylesheets/: App.css  Hotkey.css
src/types/: User.ts
src/utils/: api.ts  interfaces.ts  requests.ts  storage.ts
tauri/: package-lock.json  package.json
tauri/src/: App.tsx  Home.tsx  Login.tsx
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: main.rs  navigate.rs
tauri/src/components/: Home.tsx
tauri/src/utils/: api.ts  requests.ts
