[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.3", features = ["clipboard-read-text", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "global-shortcut-all", "path-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
url = "2.3.1"
oneshot = "0.1.5"
wry = "0.24.1"
device_query = "1.1.2"
lazy_static = "1.4.0"
futures = "0.3.26"
open = "4.0.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = { version = "=0.19", default-features = false }
windows = { version = "=0.39", default-features = false }
